--- a/ClientApp/src/components/Pages/Track/track.scss
+++ b/ClientApp/src/components/Pages/Track/track.scss
@@ -134,7 +134,7 @@
 
 @media screen and (min-width: 840px) {
     .trackmain{
-        padding-top: 7rem !important;
+        // padding-top: 7rem !important;
         .secContent {
             grid-template-columns: repeat(3, 1fr);
 
